--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 							<a class="nav-link" href="index.html">Home </a>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+						<li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
 						<li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
 						<li class="nav-item"><a class="nav-link" href="#">Gallery</a></li>
 						<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -537,6 +538,10 @@
 							<h2 class="up-title">
 								Latest news &amp; articles
 							</h2>
+							<h2 class="up-title">
+								Coming Soon <br>
+								<img src="assets/img/shape/site-title-shape.png" alt="no image">
+							</h2>
 							<p class="mb-0">
 								been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
 							</p>
@@ -556,7 +561,7 @@
 						</div>
 						<div class="blog-desc">
 							<h4 class="heading-4">
-								Consulted admitting is power acuteness.
+								Blog1
 							</h4>
 							<p>
 								Lorem ipsum dolor sit amet, consectetur 
@@ -580,7 +585,7 @@
 						</div>
 						<div class="blog-desc">
 							<h4 class="heading-4">
-								Sed aliquet ultrices urna king alit
+								Blog2
 							</h4>
 							<p>
 								Lorem ipsum dolor sit amet, consectetur 
@@ -604,7 +609,7 @@
 						</div>
 						<div class="blog-desc">
 							<h4 class="heading-4">
-								Consulted ipsum dolor sit amet acuteness.
+								Blog3
 							</h4>
 							<p>
 								Lorem ipsum dolor sit amet, consectetur 
@@ -616,7 +621,12 @@
 							</a>
 						</div>
 					</div>
+					
 				</div>
+			</div>
+
+			<div style="display: flex;justify-content: center;align-items: center;">
+				<a  href="#blogs" class="btn-1 service-bt btn-sm btn-sec">Show All Blogs</a>
 			</div>
 		</div>
 		<!-- End Blog -->
