--- a/service.html
+++ b/service.html
@@ -61,6 +61,7 @@
 								<a class="nav-link" href="index.html">Home</a>
 							</li>
 							<li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+							<li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
 							<li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
 							<li class="nav-item"><a class="nav-link" href="#">Gallery</a></li>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
