--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 							<li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
 							<li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
 							<li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
-							<li class="nav-item"><a class="nav-link" href="#">Gallery</a></li>
+							<li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
 							<li class="nav-item"><a class="nav-link" href="service.html">Contact</a></li>
 							
 						</ul>
