--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title> Techlo - It Solutions Template </title>
+	<title> Sankal  Hospital </title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -33,7 +33,7 @@
 			flex-wrap: wrap;
 			justify-content: center;
 			gap: 15px;
-			padding: 20px;
+			padding:100px 10px;
 		}
 
 		.gallery-item {
@@ -148,7 +148,7 @@
 	</style>
 </head>
 
-<body>
+<body id="bdy">
 
 
 	<!-- Start PreLoader 
@@ -441,7 +441,8 @@
 			<div class="container">
 				<div class="copyright-element">
 					<p class="mb-0">
-						Copyright 2023 Techlo - It Solutions Template . All Rights Reserved By Templatebucket
+						Copyright 2023 Sankal Multispecialty Hospital . All Rights Reserved .
+						
 					</p>
 					<ul class="footer-social">
 						<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
