--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
 <head>	
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title> Techlo - It Solutions Template </title>
+	<title> Sankal  Hospital </title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -239,14 +239,14 @@
 									
 									<a href="gallery.html">
 										<i class="ti-angle-right"></i>
-										Our Projects
+										Our Services
 									</a>
 								</li>
 								<li>
 									
-									<a href="blog.html">
+									<a href="gallery.html">
 										<i class="ti-angle-right"></i>
-										News &amp; Media
+										Gallery
 									</a>
 								</li>
 								<li>
@@ -338,7 +338,7 @@
 		<div class="copyright">
 			<div class="container">
 				<div class="copyright-element">
-					<p class="mb-0">Copyright 2023 Techlo - It Solutions Template . All Rights Reserved By Templatebucket</p>
+					<p class="mb-0">Copyright 2023 Sankal Multispecialty Hospital . All Rights Reserved .</p>
 					<ul class="footer-social">
 						<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 						<li><a href="#"><i class="fab fa-instagram"></i></a></li>
