--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								<div class="hero-content-desc">
 									<span class="hero-sub-title mb-20">Professional it solution ~</span>
 									<h2 class="hero-title">
-										Welcome To Our Hospital
+										Welcome To Sankal Hospital
 									</h2>
 									<p>
 										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget tortor convalli ex auctor fringilla efficitur nec est. Aenean eros ipsum, feugiat nec euismod.
