--- a/gallery.html
+++ b/gallery.html
@@ -255,28 +255,28 @@
 	<!-- End header -->
 	<div class="gallery">
 		<div class="gallery-item">
-			<img src="assets/img/pictures/blog-1.jpg" alt="Image 1" class="gallery-img">
+			<img src="assets/img/gallery/1.jpg" alt="Image 1" class="gallery-img">
 		</div>
 		<div class="gallery-item">
-			<img src="assets/img/pictures/process.jpg" alt="Image 2" class="gallery-img">
+			<img src="assets/img/gallery/2.jpg" alt="Image 2" class="gallery-img">
 		</div>
 		<div class="gallery-item">
-			<img src="assets/img/vector/about.png" alt="Image 3" class="gallery-img">
+			<img src="assets/img/gallery/3.jpg" alt="Image 3" class="gallery-img">
 		</div>
 		<div class="gallery-item">
-			<img src="assets/img/pictures/faq.jpg" alt="Image 4" class="gallery-img">
+			<img src="assets/img/gallery/4.jpg" alt="Image 4" class="gallery-img">
 		</div>
 		<div class="gallery-item">
-			<img src="assets/img/pictures/blog-1.jpg" alt="Image 1" class="gallery-img">
+			<img src="assets/img/gallery/5.jpg" alt="Image 1" class="gallery-img">
 		</div>
 		<div class="gallery-item">
-			<img src="assets/img/pictures/process.jpg" alt="Image 2" class="gallery-img">
+			<img src="assets/img/gallery/6.jpg" alt="Image 2" class="gallery-img">
 		</div>
 		<div class="gallery-item">
-			<img src="assets/img/vector/about.png" alt="Image 3" class="gallery-img">
+			<img src="assets/img/gallery/7.jpg" alt="Image 3" class="gallery-img">
 		</div>
 		<div class="gallery-item">
-			<img src="assets/img/pictures/faq.jpg" alt="Image 4" class="gallery-img">
+			<img src="assets/img/gallery/8.jpg" alt="Image 4" class="gallery-img">
 		</div>
 	</div>
 
@@ -441,7 +441,7 @@
 			<div class="container">
 				<div class="copyright-element">
 					<p class="mb-0">
-						Copyright 2023 Sankal Multispecialty Hospital . All Rights Reserved .
+						Copyright 2024Sankal Multispecialty Hospital . All Rights Reserved .
 						
 					</p>
 					<ul class="footer-social">
