--- a/service.html
+++ b/service.html
@@ -112,7 +112,7 @@
 								<img src="assets/img/shape/site-title-shape.png" alt="no image">
 							</div>
 							<h2 class="up-title mb-0">
-								We provide best services for your business
+								We provide best services for your health
 							</h2>
 						</div>
 					</div>
@@ -126,7 +126,7 @@
 									<i class="icofont-pixels"></i>
 								</div>
 								<div class="service-element">
-									<h4 class="heading-4">It management <br /> services</h4>
+									<h4 class="heading-4">General Surgery</h4>
 									<p class="mb-0">
 										Lorem Ipsum is simplyjkls dummy text of the printi and typesetting indust.
 									</p>
@@ -148,7 +148,7 @@
 									<i class="icofont-users-alt-2"></i>
 								</div>
 								<div class="service-element">
-									<h4 class="heading-4">It consulting <br /> services</h4>
+									<h4 class="heading-4">Laparoscopic Surgery</h4>
 									<p class="mb-0">
 										Lorem Ipsum is simplyjkls dummy text of the printi and typesetting indust.
 									</p>
@@ -170,7 +170,7 @@
 									<i class="icofont-diamond"></i>
 								</div>
 								<div class="service-element">
-									<h4 class="heading-4">It financial <br /> services</h4>
+									<h4 class="heading-4">Orthopedic Surgery</h4>
 									<p class="mb-0">
 										Lorem Ipsum is simplyjkls dummy text of the printi and typesetting indust.
 									</p>
@@ -192,7 +192,7 @@
 									<i class="icofont-diamond"></i>
 								</div>
 								<div class="service-element">
-									<h4 class="heading-4">It financial <br /> services</h4>
+									<h4 class="heading-4">Emergency & Trauma Care</h4>
 									<p class="mb-0">
 										Lorem Ipsum is simplyjkls dummy text of the printi and typesetting indust.
 									</p>
@@ -214,7 +214,7 @@
 									<i class="icofont-diamond"></i>
 								</div>
 								<div class="service-element">
-									<h4 class="heading-4">It financial <br /> services</h4>
+									<h4 class="heading-4">Urology</h4>
 									<p class="mb-0">
 										Lorem Ipsum is simplyjkls dummy text of the printi and typesetting indust.
 									</p>
@@ -236,7 +236,29 @@
 									<i class="icofont-diamond"></i>
 								</div>
 								<div class="service-element">
-									<h4 class="heading-4">It financial <br /> services</h4>
+									<h4 class="heading-4">TURP Surgery</h4>
+									<p class="mb-0">
+										Lorem Ipsum is simplyjkls dummy text of the printi and typesetting indust.
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="service-bottom">
+							<a href="service-single.html" class="service-btn-srv">
+								<span>03</span>
+								<p>view details <i class="ti-arrow-right"></i></p>
+							</a>
+						</div>
+					</div>
+					<div class="service-box-2">
+						<div class="service-content">
+							<img src="assets/img/pictures/service-3.jpg" class="service-main-pic" alt="no image">
+							<div class="service-desc-2">
+								<div class="service-icon-2">
+									<i class="icofont-diamond"></i>
+								</div>
+								<div class="service-element">
+									<h4 class="heading-4">General Medicine</h4>
 									<p class="mb-0">
 										Lorem Ipsum is simplyjkls dummy text of the printi and typesetting indust.
 									</p>
@@ -408,7 +430,7 @@
 		<div class="copyright">
 			<div class="container">
 				<div class="copyright-element">
-					<p class="mb-0">Copyright 2023 Sankal Multispecialty Hospital . All Rights Reserved .</p>
+					<p class="mb-0">Copyright 2024Sankal Multispecialty Hospital . All Rights Reserved .</p>
 					<ul class="footer-social">
 						<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 						<li><a href="#"><i class="fab fa-instagram"></i></a></li>
