--- a/about.html
+++ b/about.html
@@ -113,27 +113,29 @@
 						<div class="about-right-content-2">
 							<span class="hero-sub-title">About Us</span>
 							<h2 class="heading-1">
-								We provide best solution <br> for your business
+								Quality Care, Expert Doctors, Compassionate Healing – Your Health, Our Priority.
 							</h2>
 							<p class="mb-30">
-								Lorem Ipsum is simply dummy text of the printing and typesetting mor industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and the scrambled it to make specimen book. the printing and typesetting mor industry
+								Sankal Multispeciality Hospital, established in 2020, offers comprehensive, patient-centered care
+with expert doctors, advanced technology, and compassionate services, ensuring top-quality
+treatments for the community of Hagaribommanahalli.
 							</p>
 							<ul class="ul-li mb-30">
-								<li><i class="ti-check"></i>13000 SEO Keywords</li>
-								<li><i class="ti-check"></i>SEO Optimization</li>
-								<li><i class="ti-check"></i>Live Supports</li>
+								<li><i class="ti-check"></i>Patient-centered care</li>
+								<li><i class="ti-check"></i>Expert doctors</li>
+								<li><i class="ti-check"></i>50-bedded facility</li>
 							</ul>
 							<div class="about-btn-content">
-								<a href="about.html" class="btn-1 btn-theme">Know More</a>
+								<a href="contact.html" class="btn-1 btn-theme">Know More</a>
 								<div class="about-call">
 									<div class="about-call-icon">
 										<i>
 											<img src="assets/img/icon/telephone.png" alt="no image">
 										</i>
 									</div>
-									<div class="about-call-text">
+									<div class="about-call-text text-dark">
 										<span>Call for help</span>
-										<h5 class="mb-0">+123-4567-8900</h5>
+										<h5 class="mb-0"><a href="tel:+919606799873">+919606799873</a></h5>
 									</div>
 								</div>
 							</div>
@@ -154,7 +156,7 @@
 						<div class="col-xl-3">
 							<div class="choose-left element-center ment">
 								<div class="choose-left-content">
-									<span class="hero-sub-title">Why Choose Us</span>
+									<span class="hero-sub-title">facilities We Provide</span>
 									<h2 class="heading-1 mb-0">
 										Why people
 										choose our
@@ -169,34 +171,35 @@
 									<div class="col-xl-4 col-md-6">
 										<div class="choose-box mt-50">
 											<i class="icofont-bug"></i>
-											<h4 class="heading-4">It Solution</h4>
+											<h4 class="heading-4">Expert Care Team</h4>
 											<p>
-												Lorem ipsum dolor sit amet, consectetur adipisc-ing elit. Mauris commodo in dolor.
+												Highly qualified physicians and specialists committed to ensuring the best medical
+												care available.
 											</p>
-											<a href="service-single.html" class="choose-btn">Read More</a>
 										</div>
 									</div>
 									<div class="col-xl-4 col-md-6">
 										<div class="choose-box">
 											<img src="assets/img/shape/choose-shape.png" alt="no image" class="choose-shape">
 											<i class="icofont-hard-disk"></i>
-											<h4 class="heading-4">Cyber Security</h4>
+											<h4 class="heading-4">24/7 Emergency Services</h4>
 											<p>
-												Lorem ipsum dolor sit amet, consectetur adipisc-ing elit. Mauris commodo in dolor.
+												Emergency and trauma care provided at all times with the utmost
+												urgency.
 											</p>
-											<a href="service-single.html" class="choose-btn">Read More</a>
 										</div>
 									</div>
 									<div class="col-xl-4 col-md-6">
 										<div class="choose-box mt-50">
 											<i class="icofont-dashboard-web"></i>
-											<h4 class="heading-4">It Consultancy</h4>
+											<h4 class="heading-4">Affordable Care </h4>
 											<p>
-												Lorem ipsum dolor sit amet, consectetur adipisc-ing elit. Mauris commodo in dolor.
+												Good-quality health care solutions at the cheapest rates for everyone's well-being.
 											</p>
-											<a href="service-single.html" class="choose-btn">Read More</a>
 										</div>
 									</div>
+
+									
 								</div>
 							</div>
 						</div>
@@ -346,13 +349,14 @@
 										<div class="accordion-item">
 											<h2 class="accordion-header" id="headingTwo">
 												<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" fdprocessedid="47cq7">
-													1. How long does it takes to complete the Web Design?
+													1. What kind of specialties do Sankal Multispeciality Hospital treat?
 												</button>
 											</h2>
 											<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
 												<div class="accordion-body">
 													<p class="mb-0">
-														In business, time is money. So, when you have a problem that is putting your business on hold, a quick response rate is critical. actually one 
+														We cover the whole spectrum of general surgery, urology, orthopedics, emergency, and many more,
+for holistic care under one roof.
 													</p>
 												</div>
 											</div>
@@ -360,13 +364,14 @@
 										<div class="accordion-item">
 											<h2 class="accordion-header" id="headingOne">
 												<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" fdprocessedid="20x8cq">
-													2.How much it will cost For Web Design?
+													2. How do I make an appointment with a particular specialist?
 												</button>
 											</h2>
 											<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
 												<div class="accordion-body">
 													<p class="mb-0">
-														In business, time is money. So, when you have a problem that is putting your business on hold, a quick response rate is critical. actually one 
+														You can easily get hold of an appointment by either making a call at our hospital's reception desk or
+use our online booking application on your website.
 													</p>
 												</div>
 											</div>
@@ -374,13 +379,47 @@
 										<div class="accordion-item">
 											<h2 class="accordion-header" id="headingThree">
 												<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" fdprocessedid="0oxn7t">
-												3. How should I proceed to engage your web design services?
+													3. What are the emergency services at Sankal Multispeciality Hospital?
 												</button>
 											</h2>
 											<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
 												<div class="accordion-body">
 													<p class="mb-0">
-														In business, time is money. So, when you have a problem that is putting your business on hold, a quick response rate is critical. actually one 
+														We provide 24/7 emergency and trauma care and hence offer immediate medical attention during
+the time of a critical condition.
+													</p>
+												</div>
+											</div>
+										</div>
+										<div class="accordion-item">
+											<h2 class="accordion-header" id="headingThree">
+												<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" fdprocessedid="0oxn7t">
+													4. Are there support services for patients and their families?
+												</button>
+											</h2>
+											<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+												<div class="accordion-body">
+													<p class="mb-0">
+														Yes, we provide counseling, care coordination, and patient support services to help families in
+dealing with the treatment process.
+the time of a critical condition.
+													</p>
+												</div>
+											</div>
+										</div>
+										<div class="accordion-item">
+											<h2 class="accordion-header" id="headingThree">
+												<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" fdprocessedid="0oxn7t">
+													5. How does the hospital focus on patient safety and infection control?
+												</button>
+											</h2>
+											<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+												<div class="accordion-body">
+													<p class="mb-0">
+														We have very tight infection control protocols in terms of sterilization, cleanliness, and safety
+measures to ensure every patient is safe.
+dealing with the treatment process.
+the time of a critical condition.
 													</p>
 												</div>
 											</div>
@@ -550,7 +589,7 @@
 		<div class="copyright">
 			<div class="container">
 				<div class="copyright-element">
-					<p class="mb-0">Copyright 2023 Sankal Multispecialty Hospital . All Rights Reserved .</p>
+					<p class="mb-0">Copyright 2024Sankal Multispecialty Hospital . All Rights Reserved .</p>
 					<ul class="footer-social">
 						<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 						<li><a href="#"><i class="fab fa-instagram"></i></a></li>
