--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
 											<div class="addr-desc">
 												<h5>Location</h5>
 												<p class="mb-0">
-													22 Baker Street, London, United <br> Kingdom, W1U 3BW
+													Shimoga - Harihar - Hospet Rd, adjacent to focus mart, Basaveshwar bajar, Hagaribommanahalli, Karnataka 583212
 												</p>
 											</div>
 										</div>
@@ -137,8 +137,7 @@
 											<div class="addr-desc">
 												<h5>Make a Call</h5>
 												<p class="mb-0">
-													+1-940-394-2948<br>
-													+1-389-385-3807
+													<a href="+919606799873">+919606799873</a>
 												</p>
 											</div>
 										</div>
@@ -149,8 +148,7 @@
 											<div class="addr-desc">
 												<h5>Our Email</h5>
 												<p class="mb-0">
-													info@mdjonymia649.com<br>
-													support@logtra.com
+													<a href="mailto:sankalhospital@gmail.com">sankalhospital@gmail.com</a>
 												</p>
 											</div>
 										</div>
@@ -219,9 +217,10 @@
 		
 		<!-- Start Google Map
 		============================================= -->
+		
 		<div class="g-map-area">
 			<div class="g-map--wrapper text-center">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3645.133068555471!2d91.08454181482016!3d23.99107768447128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3754051b50ebac3f%3A0x735c1cc426d8ebb!2sNatai%20Bodtoli%20Bazar%2C%20Natai%2C%2C%20Brahmanbaria!5e0!3m2!1sen!2sbd!4v1594548160557!5m2!1sen!2sbd"></iframe>
+				<iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3662.330465942437!2d76.2082381!3d15.049646899999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb9c3941b6178c7%3A0x26b0e5675239ee84!2sSANKAL%20MULTISPECIALITY%20HOSPITAL!5e1!3m2!1sen!2sin!4v1733814260500!5m2!1sen!2sin"></iframe>
 			</div>
 		</div>
 		<!-- End Google Map -->
@@ -378,7 +377,7 @@
 		<div class="copyright">
 			<div class="container">
 				<div class="copyright-element">
-					<p class="mb-0">Copyright 2023 Sankal Multispecialty Hospital . All Rights Reserved .</p>
+					<p class="mb-0">Copyright 2024Sankal Multispecialty Hospital . All Rights Reserved .</p>
 					<ul class="footer-social">
 						<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 						<li><a href="#"><i class="fab fa-instagram"></i></a></li>
