--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
 			display: flex;
 			flex-wrap: wrap;
 			justify-content: center;
-			gap: 15px;
+			gap: 50px;
 			padding:100px 10px;
 		}
 
@@ -44,8 +44,8 @@
 		}
 
 		.gallery-img {
-			width: 350px;
-			height: 300px;
+			width: 500px;
+			height: 320px;
 			object-fit: cover;
 			transition: transform 0.3s ease, filter 0.3s ease;
 			cursor: pointer;
@@ -205,8 +205,8 @@
 			<div class="navbar navbar-expand-lg bsnav bsnav-sticky bsnav-sticky-slide bsnav-transparent">
 				<div class="container ">
 					<a class="navbar-brand" href="index.html">
-						<img src="assets/img/logo/logo-white.png" class="logo-display" alt="thumb">
-						<img src="assets/img/logo/logo-white.png" class="logo-scrolled" alt="thumb">
+						<img src="assets/img/logo/sankalp.jpg" class="logo-display" alt="logo">
+							<img src="assets/img/logo/sankalp.png" class="logo-scrolled" alt="logo">
 					</a>
 					<button class="navbar-toggler toggler-spring"><span class="navbar-toggler-icon"></span></button>
 					<div class="collapse navbar-collapse justify-content-md-center">
@@ -277,6 +277,36 @@
 		</div>
 		<div class="gallery-item">
 			<img src="assets/img/gallery/8.jpg" alt="Image 4" class="gallery-img">
+		</div>
+		<div class="gallery-item">
+			<img src="assets/img/gallery/9.jpg" alt="Image 4" class="gallery-img">
+		</div>
+		<div class="gallery-item">
+			<img src="assets/img/gallery/10.jpg" alt="Image 4" class="gallery-img">
+		</div>
+		<div class="gallery-item">
+			<img src="assets/img/gallery/11.jpg" alt="Image 4" class="gallery-img">
+		</div>
+		<div class="gallery-item">
+			<img src="assets/img/gallery/12.jpg" alt="Image 4" class="gallery-img">
+		</div>
+		<div class="gallery-item">
+			<img src="assets/img/gallery/13.jpg" alt="Image 4" class="gallery-img">
+		</div>
+		<div class="gallery-item">
+			<img src="assets/img/gallery/14.jpg" alt="Image 4" class="gallery-img">
+		</div>
+		<div class="gallery-item">
+			<img src="assets/img/gallery/15.jpg" alt="Image 4" class="gallery-img">
+		</div>
+		<div class="gallery-item">
+			<img src="assets/img/gallery/16.jpg" alt="Image 4" class="gallery-img">
+		</div>
+		<div class="gallery-item">
+			<img src="assets/img/gallery/17.jpg" alt="Image 4" class="gallery-img">
+		</div>
+		<div class="gallery-item">
+			<img src="assets/img/gallery/18.jpg" alt="Image 4" class="gallery-img">
 		</div>
 	</div>
 
