--- a/gallery.html
+++ b/gallery.html
@@ -333,9 +333,8 @@
 								<img src="assets/img/logo/logo-white.png" alt="no image">
 							</div>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur
-								adipiscing elit, sed do eiusmod temp incididunt
-								ut labore et dolore
+								Delivering Quality Healthcare with Expertise and Compassion
+Sankal Multi Speciality Hospital provides advanced, trusted, and patient-focused care for your health and wellness
 							</p>
 							<div class="subscribe-area">
 								<form>
