--- a/service.html
+++ b/service.html
@@ -293,7 +293,8 @@
 								<img src="assets/img/logo/sankalp.jpg" alt="no image">
 							</div>
 							<p>
-								Delivering Quality Healthcare with Expertise and Compassion.
+								Delivering Quality Healthcare with Expertise and Compassion
+Sankal Multi Speciality Hospital provides advanced, trusted, and patient-focused care for your health and wellness
 							</p>
 						
 						</div>
