--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 
 		<!-- Start Breadcrumb
 		============================================= -->
-		<div class="site-breadcrumb" style="background: url(assets/img/pictures/breadcrumb.jpg)">
+		<div class="site-breadcrumb" style="background: url(assets/img/bg/bg-review.jpg)">
 			<div class="container">
 				<div class="site-breadcrumb-wpr">
 					<h2 class="breadcrumb-title">About Us</h2>
@@ -107,7 +107,7 @@
 			<div class="container">
 				<div class="about-wpr-2 grid-2">
 					<div class="about-left-2">
-						<img src="assets/img/vector/about.png" alt="no image">
+						<img src="assets/img/banners/team.png" alt="no image">
 					</div>
 					<div class="about-right-2 element-center">
 						<div class="about-right-content-2">
@@ -172,7 +172,7 @@
 								<div class="row g-5">
 									<div class="col-xl-4 col-md-6">
 										<div class="choose-box mt-50">
-											<i class="icofont-bug"></i>
+											<i class="icofont-people"></i>
 											<h4 class="heading-4">Expert Care Team</h4>
 											<p>
 												Highly qualified physicians and specialists committed to ensuring the
@@ -185,7 +185,7 @@
 										<div class="choose-box">
 											<img src="assets/img/shape/choose-shape.png" alt="no image"
 												class="choose-shape">
-											<i class="icofont-hard-disk"></i>
+											<i class="icofont-ui-call"></i>
 											<h4 class="heading-4">24/7 Emergency Services</h4>
 											<p>
 												Emergency and trauma care provided at all times with the utmost
@@ -195,7 +195,7 @@
 									</div>
 									<div class="col-xl-4 col-md-6">
 										<div class="choose-box mt-50">
-											<i class="icofont-dashboard-web"></i>
+											<i class="icofont-heart-beat-alt"></i>
 											<h4 class="heading-4">Affordable Care </h4>
 											<p>
 												Good-quality health care solutions at the cheapest rates for everyone's
@@ -263,8 +263,9 @@
 
 		<!-- Start Review
 		============================================= -->
-		<div class="review-area hero-bg de-padding"
-			style="background-image: url(assets/img/bg/bg-review.jpg);margin-top: 100px;">
+			<!-- Start Review
+		============================================= -->
+		<div class="review-area hero-bg de-padding" style="background-image: url(assets/img/bg/bg-review.jpg)">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-8 offset-lg-2">
@@ -274,7 +275,7 @@
 								<img src="assets/img/shape/site-title-shape-white.png" alt="no image">
 							</div>
 							<h2 class="up-title mb-0">
-								What 0ur client say
+								What 0ur Patient Say
 							</h2>
 						</div>
 					</div>
@@ -286,17 +287,14 @@
 							<div class="swiper-slide">
 								<div class="review-single">
 									<div class="review-up">
-										<img src="assets/img/pictures/user-1.png" alt="no image">
+										<img src="assets/img/banners/male_doc.jpg" alt="no image" width="80px">
 									</div>
 									<div class="review-bottom">
-										<p>
-											There are many variations of passages of Lorem Ipsum available, but the
-											majority have suffered alteration in some form, by injected humour, or
-											randomised words which don't look even slightly believable.
+										<p class="fs-3" >
+											Sankal Multispeciality Hospital is a great place for healthcare with excellent doctors and nurses who provide amazing care. The whole team is kind, dedicated, and makes sure patients get the best treatment. A big thank you to Dr. Manjunath Sankal for his support, expertise, and care during the treatment. His guidance made a big difference in the recovery process. I highly recommend this hospital to anyone looking for quality medical care. Thank you, Sankal Multispeciality Hospital, for your amazing service! 
 										</p>
 										<div class="review-bio">
-											<h5>Kylle Coleken</h5>
-											<span>CEO</span>
+											<h5 class="fs-1" style="color: #231212;">Ramesh Naik</h5>
 										</div>
 									</div>
 								</div>
@@ -304,17 +302,14 @@
 							<div class="swiper-slide">
 								<div class="review-single">
 									<div class="review-up">
-										<img src="assets/img/pictures/user-2.png" alt="no image">
+										<img src="assets/img/banners/male_doc.jpg" alt="no image" width="80px">
 									</div>
 									<div class="review-bottom">
-										<p>
-											There are many variations of passages of Lorem Ipsum available, but the
-											majority have suffered alteration in some form, by injected humour, or
-											randomised words which don't look even slightly believable.
+										<p class="fs-3">
+											Sankal Multispeciality Hospital is the best hospital in Hagaribommanahalli. They provide excellent care with a team of skilled and friendly doctors, nurses, and staff who truly care about their patients. A big thank you to Dr. Manjunath Sankal for his support, expertise, and dedication during my treatment. His kindness and care made a big difference in my recovery. I highly recommend this hospital to anyone looking for good and reliable healthcare. Thank you, Sankal Multispeciality Hospital, for your great service!
 										</p>
 										<div class="review-bio">
-											<h5>Coleman Verender</h5>
-											<span>Co-Founder</span>
+											<h5 class="fs-1"  style="color: #231212;">Abhi Shek</h5>
 										</div>
 									</div>
 								</div>
@@ -322,17 +317,14 @@
 							<div class="swiper-slide">
 								<div class="review-single">
 									<div class="review-up">
-										<img src="assets/img/pictures/user-3.png" alt="no image">
+										<img src="assets/img/banners/male_doc.jpg" alt="no image" width="80px">
 									</div>
 									<div class="review-bottom">
-										<p>
-											There are many variations of passages of Lorem Ipsum available, but the
-											majority have suffered alteration in some form, by injected humour, or
-											randomised words which don't look even slightly believable.
+										<p class="fs-3">
+											I am truly grateful to Sankal Multispeciality Hospital for their quick and efficient emergency care. The team was professional and kind during a difficult time. A special thank you to Dr. Manjunath Sankal for his constant support, expertise, and dedication throughout the treatment. His care and reassurance meant so much during such a challenging moment. I highly recommend this hospital for anyone needing reliable emergency care.
 										</p>
 										<div class="review-bio">
-											<h5>Kolman Kwang</h5>
-											<span>Manager</span>
+											<h5 class="fs-1"  style="color: #231212;">Sathya Narayana</h5>
 										</div>
 									</div>
 								</div>
@@ -343,7 +335,10 @@
 					</div>
 				</div>
 			</div>
+			<center><a href="https://www.google.com/maps/place/SANKAL+MULTISPECIALITY+HOSPITAL/@15.049647,76.208238,841m/data=!3m1!1e3!4m8!3m7!1s0x3bb9c3941b6178c7:0x26b0e5675239ee84!8m2!3d15.0496469!4d76.2082381!9m1!1b1!16s%2Fg%2F11qqylp9jw?hl=en&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" class="btn-1 service-bt btn-sm btn-sec">Show More Reviews</a></center>
 		</div>
+		<!-- End Review -->
+
 		<!-- End Review -->
 
 		<!-- Start Feature
@@ -354,7 +349,7 @@
 					<div class="row">
 						<div class="col-xl-6">
 							<div class="faq-left-content">
-								<img src="assets/img/pictures/faq.jpg" alt="no image">
+								<img src="assets/img/banners/faq.jpg" alt="no image">
 							</div>
 						</div>
 						<div class="col-xl-6">
