--- a/gallery.html
+++ b/gallery.html
@@ -238,7 +238,7 @@
 	<main class="main">
 		<!-- Start Breadcrumb
 		============================================= -->
-		<div class="site-breadcrumb" style="background: url(assets/img/pictures/breadcrumb.jpg)">
+		<div class="site-breadcrumb" style="background: url(assets/img/bg/bg-review.jpg)">
 			<div class="container">
 				<div class="site-breadcrumb-wpr">
 					<h2 class="breadcrumb-title">Gallery</h2>
