--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		<div class="hero-area pos-rel hero-overlay-2 hero-bg"
 			style="background-image: url(assets/img/pictures/slider-4.jpg)">
 			<img src="assets/img/shape/hero-shape.png" alt="no image" class="hero-shape-1">
-			<img src="assets/img/shape/dot.png" alt="no image" class="hero-shape-2">
+			<!-- <img src="assets/img/shape/dot.png" alt="no image" class="hero-shape-2"> -->
 			<img src="assets/img/shape/wavy-1.png" alt="no image" class="hero-shape-3">
 			<img src="assets/img/shape/wavy-2.png" alt="no image" class="hero-shape-4">
 			<div class="hero-single">
@@ -157,7 +157,7 @@
 						</div>
 						<div class="col-xl-6">
 							<div class="left-hdr-pic">
-								<img src="assets/img/person/person-2.png" alt="no image">
+								<img src="assets/img/banners/heroine.png" alt="no image" >
 							</div>
 						</div>
 					</div>
@@ -173,7 +173,7 @@
 				<div class="feature-wpr grid-3">
 					<div class="feature-box">
 						<div class="feature-icon">
-							<i class="flaticon-cloud"></i>
+							<i class="flaticon-support"></i>
 						</div>
 						<div class="feature-desc">
 							<h4>Expert Leadership</h4>
@@ -187,7 +187,7 @@
 					</div>
 					<div class="feature-box">
 						<div class="feature-icon">
-							<i class="flaticon-project-management"></i>
+							<i class="flaticon-infrastructure-1"></i>
 						</div>
 						<div class="feature-desc">
 							<h4>Advanced Infrastructure</h4>
@@ -201,7 +201,7 @@
 					</div>
 					<div class="feature-box">
 						<div class="feature-icon">
-							<i class="flaticon-data-management"></i>
+							<i class="flaticon-medical-symbol"></i>
 						</div>
 						<div class="feature-desc">
 							<h4>Comprehensive Services</h4>
@@ -226,8 +226,8 @@
 				<div class="about-left">
 					<div class="about-left-content">
 						<div class="about-phase-1">
-							<img src="assets/img/pictures/about-1.jpg" alt="no image" class="about-1 mt-30">
-							<img src="assets/img/pictures/about-3.jpg" alt="no image" class="about-2">
+							<img src="assets/img/banners/whychoose.png" alt="no image" class="about-1 mt-30">
+							<!-- <img src="assets/img/pictures/about-3.jpg" alt="no image" class="about-2"> -->
 						</div>
 						<div class="about-pic-content">
 							<img src="assets/img/pictures/about-2.jpg" alt="no image" class="about-3">
@@ -335,7 +335,7 @@
 						<div class="col-xl-3 col-md-6">
 							<div class="service-box">
 								<div class="service-icon">
-									<i class="flaticon-cloud-service"></i>
+									<i class="flaticon-medical-symbol"></i>
 								</div>
 								<div class="service-desc">
 									<h5 class="heading-5">
@@ -352,7 +352,7 @@
 						<div class="col-xl-3 col-md-6">
 							<div class="service-box">
 								<div class="service-icon">
-									<i class="flaticon-gadget"></i>
+									<i class="flaticon-medical-symbol"></i>
 								</div>
 								<div class="service-desc">
 									<h5 class="heading-5">
@@ -369,7 +369,7 @@
 						<div class="col-xl-3 col-md-6">
 							<div class="service-box">
 								<div class="service-icon">
-									<i class="flaticon-robot"></i>
+									<i class="flaticon-medical-symbol"></i>
 								</div>
 								<div class="service-desc">
 									<h5 class="heading-5">
@@ -386,7 +386,7 @@
 						<div class="col-xl-3 col-md-6">
 							<div class="service-box">
 								<div class="service-icon">
-									<i class="flaticon-renewable-energy"></i>
+									<i class="flaticon-medical-symbol"></i>
 								</div>
 								<div class="service-desc">
 									<h5 class="heading-5">
@@ -460,7 +460,7 @@
 			<div class="container">
 				<div class="step-wpr grid-2">
 					<div class="step-left">
-						<img src="assets/img/pictures/process.jpg" alt="no image">
+						<img src="assets/img/banners/Home .png" alt="no image">
 					</div>
 					<div class="step-right element-center">
 						<div class="step-right-content">
@@ -669,17 +669,14 @@
 							<div class="swiper-slide">
 								<div class="review-single">
 									<div class="review-up">
-										<img src="assets/img/pictures/user-1.png" alt="no image">
+										<img src="assets/img/banners/male_doc.jpg" alt="no image" width="80px">
 									</div>
 									<div class="review-bottom">
-										<p>
-											There are many variations of passages of Lorem Ipsum available, but the
-											majority have suffered alteration in some form, by injected humour, or
-											randomised words which don't look even slightly believable.
+										<p class="fs-3" >
+											Sankal Multispeciality Hospital is a great place for healthcare with excellent doctors and nurses who provide amazing care. The whole team is kind, dedicated, and makes sure patients get the best treatment. A big thank you to Dr. Manjunath Sankal for his support, expertise, and care during the treatment. His guidance made a big difference in the recovery process. I highly recommend this hospital to anyone looking for quality medical care. Thank you, Sankal Multispeciality Hospital, for your amazing service! 
 										</p>
 										<div class="review-bio">
-											<h5>Kylle Coleken</h5>
-											<span>CEO</span>
+											<h5 class="fs-1" style="color: #231212;">Ramesh Naik</h5>
 										</div>
 									</div>
 								</div>
@@ -687,17 +684,14 @@
 							<div class="swiper-slide">
 								<div class="review-single">
 									<div class="review-up">
-										<img src="assets/img/pictures/user-2.png" alt="no image">
+										<img src="assets/img/banners/male_doc.jpg" alt="no image" width="80px">
 									</div>
 									<div class="review-bottom">
-										<p>
-											There are many variations of passages of Lorem Ipsum available, but the
-											majority have suffered alteration in some form, by injected humour, or
-											randomised words which don't look even slightly believable.
+										<p class="fs-3">
+											Sankal Multispeciality Hospital is the best hospital in Hagaribommanahalli. They provide excellent care with a team of skilled and friendly doctors, nurses, and staff who truly care about their patients. A big thank you to Dr. Manjunath Sankal for his support, expertise, and dedication during my treatment. His kindness and care made a big difference in my recovery. I highly recommend this hospital to anyone looking for good and reliable healthcare. Thank you, Sankal Multispeciality Hospital, for your great service!
 										</p>
 										<div class="review-bio">
-											<h5>Coleman Verender</h5>
-											<span>Co-Founder</span>
+											<h5 class="fs-1"  style="color: #231212;">Abhi Shek</h5>
 										</div>
 									</div>
 								</div>
@@ -705,17 +699,14 @@
 							<div class="swiper-slide">
 								<div class="review-single">
 									<div class="review-up">
-										<img src="assets/img/pictures/user-3.png" alt="no image">
+										<img src="assets/img/banners/male_doc.jpg" alt="no image" width="80px">
 									</div>
 									<div class="review-bottom">
-										<p>
-											There are many variations of passages of Lorem Ipsum available, but the
-											majority have suffered alteration in some form, by injected humour, or
-											randomised words which don't look even slightly believable.
+										<p class="fs-3">
+											I am truly grateful to Sankal Multispeciality Hospital for their quick and efficient emergency care. The team was professional and kind during a difficult time. A special thank you to Dr. Manjunath Sankal for his constant support, expertise, and dedication throughout the treatment. His care and reassurance meant so much during such a challenging moment. I highly recommend this hospital for anyone needing reliable emergency care.
 										</p>
 										<div class="review-bio">
-											<h5>Kolman Kwang</h5>
-											<span>Manager</span>
+											<h5 class="fs-1"  style="color: #231212;">Sathya Narayana</h5>
 										</div>
 									</div>
 								</div>
@@ -726,6 +717,7 @@
 					</div>
 				</div>
 			</div>
+			<center><a href="https://www.google.com/maps/place/SANKAL+MULTISPECIALITY+HOSPITAL/@15.049647,76.208238,841m/data=!3m1!1e3!4m8!3m7!1s0x3bb9c3941b6178c7:0x26b0e5675239ee84!8m2!3d15.0496469!4d76.2082381!9m1!1b1!16s%2Fg%2F11qqylp9jw?hl=en&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" class="btn-1 service-bt btn-sm btn-sec">Show More Reviews</a></center>
 		</div>
 		<!-- End Review -->
 
