--- a/service.html
+++ b/service.html
@@ -87,7 +87,7 @@
         
 		<!-- Start Breadcrumb
 		============================================= -->
-		<div class="site-breadcrumb" style="background: url(assets/img/pictures/breadcrumb.jpg)">
+		<div class="site-breadcrumb" style="background: url(assets/img/bg/bg-review.jpg)">
 			<div class="container">
 				<div class="site-breadcrumb-wpr">
 					<h2 class="breadcrumb-title">Our Services</h2>
@@ -120,7 +120,7 @@
 				<div class="service-wpr-2 grid-3">
 					<div class="service-box-2">
 						<div class="service-content">
-							<img src="assets/img/pictures/service-1.jpg" class="service-main-pic" alt="no image">
+							<img src="assets/img/banners/General.png" class="service-main-pic" alt="no image">
 							<div class="service-desc-2">
 								<div class="service-icon-2">
 									<i class="icofont-pixels"></i>
@@ -142,7 +142,7 @@
 					</div>
 					<div class="service-box-2">
 						<div class="service-content">
-							<img src="assets/img/pictures/service-2.jpg" class="service-main-pic" alt="no image">
+							<img src="assets/img/banners/LaparoscopicSurgery.png" class="service-main-pic" alt="no image">
 							<div class="service-desc-2">
 								<div class="service-icon-2">
 									<i class="icofont-users-alt-2"></i>
@@ -164,7 +164,7 @@
 					</div>
 					<div class="service-box-2">
 						<div class="service-content">
-							<img src="assets/img/pictures/service-3.jpg" class="service-main-pic" alt="no image">
+							<img src="assets/img/banners/OrthopedicSurgery.png" class="service-main-pic" alt="no image">
 							<div class="service-desc-2">
 								<div class="service-icon-2">
 									<i class="icofont-diamond"></i>
@@ -186,7 +186,7 @@
 					</div>
 					<div class="service-box-2">
 						<div class="service-content">
-							<img src="assets/img/pictures/service-3.jpg" class="service-main-pic" alt="no image">
+							<img src="assets/img/banners/Emergency.png" class="service-main-pic" alt="no image">
 							<div class="service-desc-2">
 								<div class="service-icon-2">
 									<i class="icofont-diamond"></i>
@@ -208,7 +208,7 @@
 					</div>
 					<div class="service-box-2">
 						<div class="service-content">
-							<img src="assets/img/pictures/service-3.jpg" class="service-main-pic" alt="no image">
+							<img src="assets/img/banners/Urology.png" class="service-main-pic" alt="no image">
 							<div class="service-desc-2">
 								<div class="service-icon-2">
 									<i class="icofont-diamond"></i>
@@ -230,7 +230,7 @@
 					</div>
 					<div class="service-box-2">
 						<div class="service-content">
-							<img src="assets/img/pictures/service-3.jpg" class="service-main-pic" alt="no image">
+							<img src="assets/img/banners/TURP.png" class="service-main-pic" alt="no image">
 							<div class="service-desc-2">
 								<div class="service-icon-2">
 									<i class="icofont-diamond"></i>
@@ -252,7 +252,7 @@
 					</div>
 					<div class="service-box-2">
 						<div class="service-content">
-							<img src="assets/img/pictures/service-3.jpg" class="service-main-pic" alt="no image">
+							<img src="assets/img/banners/GeneralMedicine.png" class="service-main-pic" alt="no image">
 							<div class="service-desc-2">
 								<div class="service-icon-2">
 									<i class="icofont-diamond"></i>
