--- a/team.html
+++ b/team.html
@@ -87,7 +87,7 @@
 
 		<!-- Start Breadcrumb
 		============================================= -->
-		<div class="site-breadcrumb" style="background: url(assets/img/pictures/breadcrumb.jpg)">
+		<div class="site-breadcrumb" style="background: url(assets/img/bg/bg-review.jpg)">
 			<div class="container">
 				<div class="site-breadcrumb-wpr">
 					<h2 class="breadcrumb-title">Our Team</h2>
@@ -110,13 +110,13 @@
 						<img src="assets/img/shape/team-top.png" class="team-top" alt="no mage">
 						<img src="assets/img/shape/half-circle.png" class="team-half-circle" alt="no mage">
 						<div class="team-bio-2">
-							<a href="team-single.html">
+							<a>
 								<h4 class="heading-4">Dr. Manjunath Sankal</h4>
 							</a>
 							<span class="fs-2">MBBS, MS , Director, Consultant Laparoscopic and General Surgeon</span>
 						</div>
 						<div class="team-pic-2">
-							<img src="assets/img/pictures/team-2-1.jpg" alt="no image">
+							<img src="assets/img/doctor/DrManjunath Sankal.png" alt="no image" width="225px">
 						</div>
 						<div>
 							<p style="text-align: start;color: black;font-size: 18px;font-weight: 600;">Dr. Manjunath
@@ -131,13 +131,13 @@
 						<img src="assets/img/shape/team-top.png" class="team-top" alt="no mage">
 						<img src="assets/img/shape/half-circle.png" class="team-half-circle" alt="no mage">
 						<div class="team-bio-2">
-							<a href="team-single.html">
+							<a>
 								<h4 class="heading-4">Dr. Shilpa Sankal</h4>
 							</a>
 							<span class="fs-2">MBBS, MD , Consultant Anesthesiologist</span>
 						</div>
 						<div class="team-pic-2">
-							<img src="assets/img/pictures/team-2-2.jpg" alt="no image">
+							<img src="assets/img/doctor/DrShilpa.png" alt="no image">
 						</div>
 						<div>
 							<p style="text-align: start;color: black;font-size: 18px;font-weight: 600;">Dr. Shilpa
@@ -152,13 +152,13 @@
 						<img src="assets/img/shape/team-top.png" class="team-top" alt="no mage">
 						<img src="assets/img/shape/half-circle.png" class="team-half-circle" alt="no mage">
 						<div class="team-bio-2">
-							<a href="team-single.html">
+							<a>
 								<h4 class="heading-4">Dr. Achyutaraya </h4>
 							</a>
 							<span class="fs-2">MBBS, MS , Consultant Orthopedic Surgeon</span>
 						</div>
 						<div class="team-pic-2">
-							<img src="assets/img/pictures/team-2-3.jpg" alt="no image">
+							<img src="assets/img/doctor/DrAchyutharaya.png" alt="no image">
 						</div>
 						<div>
 							<div>
@@ -182,7 +182,7 @@
 								Surgeon</span>
 						</div>
 						<div class="team-pic-2">
-							<img src="assets/img/pictures/team-2-4.jpg" alt="no image">
+							<img src="assets/img/doctor/DrNaveen_DS.png" alt="no image">
 						</div>
 						<div>
 							<p style="text-align: start;color: black;font-size: 18px;font-weight: 600;">
@@ -198,13 +198,13 @@
 						<img src="assets/img/shape/team-top.png" class="team-top" alt="no mage">
 						<img src="assets/img/shape/half-circle.png" class="team-half-circle" alt="no mage">
 						<div class="team-bio-2">
-							<a href="team-single.html">
+							<a >
 								<h4 class="heading-4">Dr. Abhijeeth </h4>
 							</a>
 							<span class="fs-2">MBBS, MS, MCh (URO) , Consultant Urologist</span>
 						</div>
 						<div class="team-pic-2">
-							<img src="assets/img/pictures/team-2-5.jpg" alt="no image">
+							<img src="assets/img/doctor/DrAbhijith.png" alt="no image">
 						</div>
 						<div>
 							<p style="text-align: start;color: black;font-size: 18px;font-weight: 600;">
