--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
         
 		<!-- Start Breadcrumb
 		============================================= -->
-		<div class="site-breadcrumb" style="background: url(assets/img/pictures/breadcrumb.jpg)">
+		<div class="site-breadcrumb" style="background: url(assets/img/bg/bg-review.jpg)">
 			<div class="container">
 				<div class="site-breadcrumb-wpr">
 					<h2 class="breadcrumb-title">Contact Us</h2>
