--- a/index.html
+++ b/index.html
@@ -546,8 +546,7 @@
 					<div class="col-lg-10 offset-lg-1">
 						<div class="video-wpr">
 							<h2 class="heading-1">
-								“Some of the history of our company is that we
-								are catching up through video”
+								Schedule your visit effortlessly for seamless healthcare !
 							</h2>
 
 							<!-- <a href="tel:+919606799873" class="btn-1 service-bt btn-sm btn-sec p-5">Book An appointment</a> -->
